BATCH17_D_DEVOPS/KUBERNETES/k8s-practice/JULY-PHASE2/3-K8S-INGRESS/voting-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: voting-service
  labels:
    name: voting-service
    app: demo-voting-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: voting-app-pod
    app: demo-voting-app
