BATCH17_D_DEVOPS/KUBERNETES/k8s-practice/JULY-PHASE2/3-K8S-INGRESS/bkp_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  labels:
    app: demo-voting-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:905221885307:certificate/ed8f4616-50ea-4c8e-aeb1-c61ee0c0607f
    #arn:aws:acm:us-east-1:905221885307:certificate/930660e2-7264-4a7f-bc61-cad4f229f70b
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: vote.b17catsvsdogs.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voting-service
                port:
                  number: 80

    - host: result.b17catsvsdogs.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result-service
                port:
                  number: 80
